--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     min-height: 75px;
     display: flex;
     align-items: center;
-    background-color: rgb(21, 26, 29);
+    background-color: #44475a;
     width: 100%;
     
 }
@@ -29,7 +29,8 @@ body{
     justify-content: flex-start;
     border-radius: 10px;
     width: auto;
-    height: 100px;
+    height:60px;
+    border-radius: 10px;
 }
 
 #logo-title{
@@ -41,6 +42,7 @@ body{
 #nav-bar{
     margin-left: auto;
     justify-self: end;
+    
 }
 
 #nav-bar li{
@@ -56,7 +58,7 @@ body{
 }
 
 #main-section{
-    margin-top: 100;
+    margin-top: 140px;
     text-align: center;
     font-weight: 500;
 }
@@ -147,8 +149,15 @@ body{
     cursor: pointer;
 }
 
+#title1{
+    font-size: 35px;
+}
+
+#title{
+    font-size: 20px;
+}
 @media (max-width: 650px) {
     #ul {
-       flex-direction: column;
+        flex-direction: column;
     }
 }
